fixing settings error 2

--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,8 @@
             "src": "/(.*)",
             "dest": "hrdp/wsgi.py"
         }
+    ],
+    "rewrites": [
+        {"source": "/(.*)", "destination": "/"}
     ]
 }
